<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/button_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <HorizontalScrollView
        android:translationZ="90dp"
        android:id="@+id/menuScroll"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/llButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_button" />

            <Button
                android:id="@+id/sub"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub_button" />

            <Button
                android:id="@+id/wire"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wire_button" />

            <Button
                android:id="@+id/and"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/and_button" />

            <Button
                android:id="@+id/or"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/or_button" />

            <Button
                android:id="@+id/not"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_button" />

            <Button
                android:id="@+id/sw"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_button" />

            <Button
                android:id="@+id/led"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/led_button" />

            <Button
                android:id="@+id/toggle"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/toggle_button" />

            <Button
                android:id="@+id/intro"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/intro_button" />

            <Button
                android:id="@+id/save"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button" />

            <Button
                android:id="@+id/aButton"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/a_button" />

            <Button
                android:id="@+id/bButton"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/b_button" />

            <Button
                android:id="@+id/cButton"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c_button" />

            <Button
                android:id="@+id/undo"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/undo_button" />

            <Button
                android:id="@+id/redo"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/redo_button" />

            <Button
                android:id="@+id/nand"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nand_button" />

            <Button
                android:id="@+id/xor"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/xor_button" />

            <Button
                android:id="@+id/clear"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_button" />

            <Button
                android:id="@+id/random"
                style='"?android:attr/buttonBarButtonStyle"'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/random_button" />

        </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/gridView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/grid_draw"
        app:layout_constraintBottom_toBottomOf="@+id/menuScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/alert_light_frame" />

</androidx.constraintlayout.widget.ConstraintLayout>